tests/sumo/extended/vaporizer/errors/end_missing/errors.sumo
Error: Attribute 'end' is missing in definition of a vaporizer.
Quitting (on error).
